--- a/index.html
+++ b/index.html
@@ -3,21 +3,35 @@
 
 <head>
   <title>사이트 제목</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 
 <body>
 
-  <div>
-    sdfadf
-    <div class="yellow">div</div>
-
+  <div class="row no-gutters">
+    <div class="col-md-10">empty space</div>
+    <div class="col-md-2 icons">icons</div>
   </div>
 
-  <span class="green">span</span>
+  <div class="row no-gutters">
+    <div class="col-md-4">empty space</div>
+    <div class="col-md-4 main-logo">메인 로고</div>
+    <div class="col-md-4">empty space</div>
+  </div>
 
-  <h1 class="my-color">h1</h1>
+
+  <div class="row no-gutters">
+    <div class="col-md-12 item-01">item 01</div>
+  </div>
+
+  <div class="row no-gutters">
+    <div class="col-md-6 item-02">item 02</div>
+    <div class="col-md-6 item-03">item 03</div>
+  </div>
+
 
 
 </body>
