--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,900|Roboto:400,700,900&amp;subset=korean"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
+
+
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
@@ -15,7 +19,10 @@
 
   <div class="row no-gutters">
     <div class="col-md-10">empty space</div>
-    <div class="col-md-2 icons">icons</div>
+    <div class="col-md-2 icons">
+      <i class="fas fa-search"></i>
+      <i class="fas fa-align-justify"></i>
+    </div>
   </div>
 
   <div class="row no-gutters">
