--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
   </head>
 
   <body>
-    <div class="row no-gutters">
+    <div class="row no-gutters nav">
       <div class="col-md-10"></div>
       <div class="col-md-2 icons">
-        <i class="fas fa-search"></i> <i class="fas fa-align-justify"></i>
+        <div class="icons-wrap">
+          <i class="fas fa-search"></i> <i class="fas fa-align-justify"></i>
+        </div>
       </div>
     </div>
 
@@ -43,6 +45,8 @@
 
     <div class="row no-gutters">
       <div class="col-md-12 item-01">
+        <!-- 오버레이 (검은색 필름..) -->
+        <div class="overlay"></div>
         <!-- 글쓴이 이름 -->
         <div class="author">
           <img
@@ -56,15 +60,44 @@
           <div class="category">LIFE</div>
           <div class="title">H의 먹스타그램</div>
         </div>
-
-        <!-- 오버레이 (검은색 필름..) -->
-        <div class="overlay"></div>
       </div>
     </div>
 
     <div class="row no-gutters">
-      <div class="col-md-6 item-02">item-02</div>
-      <div class="col-md-6 item-03">item 03</div>
+      <div class="col-md-6 item-02">
+        <!-- 오버레이 (검은색 필름..) -->
+        <div class="overlay"></div>
+        <!-- 글쓴이 이름 -->
+        <div class="author">
+          <img
+            src="http://1.gravatar.com/avatar/a1beaf068923463f4ff8f749c3c729e2?s=50&d=mm&r=g"
+          />
+          <div class="name">by 디에디트</div>
+        </div>
+
+        <!-- 제목 -->
+        <div class="title-box">
+          <div class="category">DRINKS</div>
+          <div class="title">[새로나왔] 사는 게 제일 좋아</div>
+        </div>
+      </div>
+      <div class="col-md-6 item-03">
+        <!-- 오버레이 (검은색 필름..) -->
+        <div class="overlay"></div>
+        <!-- 글쓴이 이름 -->
+        <div class="author">
+          <img
+            src="http://1.gravatar.com/avatar/a1beaf068923463f4ff8f749c3c729e2?s=50&d=mm&r=g"
+          />
+          <div class="name">by 디에디트</div>
+        </div>
+
+        <!-- 제목 -->
+        <div class="title-box">
+          <div class="category">DAILY</div>
+          <div class="title">쓸모없는 것들을 사랑해</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
