--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>사이트 제목</title>
     <link
@@ -7,7 +8,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
-    />
+     />
     <link
       href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,900|Roboto:400,700,900&amp;subset=korean"
       rel="stylesheet"
@@ -18,21 +19,16 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="mystyle.css" />
   </head>
-
   <body>
-    <div class="row no-gutters nav">
+    <div class="row no-gutters">
       <div class="col-md-10"></div>
       <div class="col-md-2 icons">
-        <div class="icons-wrap">
-          <i class="fas fa-search"></i> <i class="fas fa-align-justify"></i>
-        </div>
+        <i class="fas fa-search"></i> <i class="fas fa-align-justify"></i>
       </div>
     </div>
-
     <div class="row no-gutters">
       <div class="col-md-4"></div>
       <div class="col-md-4 main-logo">
@@ -45,8 +41,6 @@
 
     <div class="row no-gutters">
       <div class="col-md-12 item-01">
-        <!-- 오버레이 (검은색 필름..) -->
-        <div class="overlay"></div>
         <!-- 글쓴이 이름 -->
         <div class="author">
           <img
@@ -60,44 +54,15 @@
           <div class="category">LIFE</div>
           <div class="title">H의 먹스타그램</div>
         </div>
+     
+        <!-- 오버레이 (검은색 필름..) -->
+       <div class="overlay"></div>
       </div>
     </div>
 
     <div class="row no-gutters">
-      <div class="col-md-6 item-02">
-        <!-- 오버레이 (검은색 필름..) -->
-        <div class="overlay"></div>
-        <!-- 글쓴이 이름 -->
-        <div class="author">
-          <img
-            src="http://1.gravatar.com/avatar/a1beaf068923463f4ff8f749c3c729e2?s=50&d=mm&r=g"
-          />
-          <div class="name">by 디에디트</div>
-        </div>
-
-        <!-- 제목 -->
-        <div class="title-box">
-          <div class="category">DRINKS</div>
-          <div class="title">[새로나왔] 사는 게 제일 좋아</div>
-        </div>
-      </div>
-      <div class="col-md-6 item-03">
-        <!-- 오버레이 (검은색 필름..) -->
-        <div class="overlay"></div>
-        <!-- 글쓴이 이름 -->
-        <div class="author">
-          <img
-            src="http://1.gravatar.com/avatar/a1beaf068923463f4ff8f749c3c729e2?s=50&d=mm&r=g"
-          />
-          <div class="name">by 디에디트</div>
-        </div>
-
-        <!-- 제목 -->
-        <div class="title-box">
-          <div class="category">DAILY</div>
-          <div class="title">쓸모없는 것들을 사랑해</div>
-        </div>
-      </div>
+      <div class="col-md-6 item-02">item-02</div>
+      <div class="col-md-6 item-03">item 03</div>
     </div>
   </body>
 </html>
